--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
   "devDependencies": {
     "@webpack-cli/serve": "^1.7.0",
     "css-loader": "^3.2.0",
-    "dart-sass": "^1.23.7",
+    "dart-sass": "^1.25.0",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
+    "less": "^4.1.3",
+    "less-loader": "7.3.0",
     "mini-css-extract-plugin": "0.9.0",
-    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
+    "stylus": "^0.59.0",
+    "stylus-loader": "3.0.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "3.9.0"
+  },
+  "dependencies": {
+    "sass-loader": "^7.1.0"
   }
 }
